--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Dec 01 20:17:55 BRST 2015
-sdk.dir=C\:\\Users\\PROJETOHUA\\AppData\\Local\\Android\\sdk
+#Wed Dec 02 08:58:47 GMT-03:00 2015
+sdk.dir=C\:\\Users\\Sidemar\\AppData\\Local\\Android\\sdk
